Удалена зависимость lombok, почищен build.gradle Поставлен logback по-умолчанию, старый logger удален.